--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -9,8 +9,8 @@ server {
     }
     
     # Proxy /api requests to the backend service
-    location /api {
-        proxy_pass http://backend.flaskapp.svc.cluster.local:8000/;
+    location /api/ {
+        proxy_pass http://backend.flaskapp.svc.cluster.local:8000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
